SERVER-73539 Add replay protection in DDL when setting the allow migrations flag