src/mongo/db/s/config/configsvr_set_allow_migrations_command.cpp
@@ -108,6 +108,10 @@ public:
     AllowedOnSecondary secondaryAllowed(ServiceContext*) const override {
         return AllowedOnSecondary::kNever;
     }
+
+    bool supportsRetryableWrite() const final {
+        return true;
+    }
 } configsvrSetAllowMigrationsCmd;
 
 }  // namespace
