src/mongo/db/s/rename_collection_coordinator.cpp
@@ -333,11 +333,15 @@ ExecutorFuture<void> RenameCollectionCoordinator::_runImpl(
 
                 // Block migrations on involved sharded collections
                 if (_doc.getOptShardedCollInfo()) {
-                    sharding_ddl_util::stopMigrations(opCtx, fromNss, _doc.getSourceUUID());
+                    _updateSession(opCtx);
+                    sharding_ddl_util::stopMigrations(
+                        opCtx, fromNss, _doc.getSourceUUID(), getCurrentSession());
                 }
 
                 if (_doc.getTargetIsSharded()) {
-                    sharding_ddl_util::stopMigrations(opCtx, toNss, _doc.getTargetUUID());
+                    _updateSession(opCtx);
+                    sharding_ddl_util::stopMigrations(
+                        opCtx, toNss, _doc.getTargetUUID(), getCurrentSession());
                 }
             }))
         .then(_buildPhaseHandler(
