src/mongo/db/s/sharding_ddl_util.cpp
@@ -269,6 +269,7 @@ write_ops::UpdateCommandRequest buildNoopWriteRequestCommand() {
 void setAllowMigrations(OperationContext* opCtx,
                         const NamespaceString& nss,
                         const boost::optional<UUID>& expectedCollectionUUID,
+                        const boost::optional<OperationSessionInfo>& osi,
                         bool allowMigrations) {
     ConfigsvrSetAllowMigrations configsvrSetAllowMigrationsCmd(nss, allowMigrations);
     configsvrSetAllowMigrationsCmd.setCollectionUUID(expectedCollectionUUID);
@@ -278,7 +279,8 @@ void setAllowMigrations(OperationContext* opCtx,
             opCtx,
             ReadPreferenceSetting{ReadPreference::PrimaryOnly},
             DatabaseName::kAdmin.toString(),
-            CommandHelpers::appendMajorityWriteConcern(configsvrSetAllowMigrationsCmd.toBSON({})),
+            CommandHelpers::appendMajorityWriteConcern(
+                configsvrSetAllowMigrationsCmd.toBSON(osi ? osi->toBSON() : BSONObj())),
             Shard::RetryPolicy::kIdempotent  // Although ConfigsvrSetAllowMigrations is not really
                                              // idempotent (because it will cause the collection
                                              // version to be bumped), it is safe to be retried.
@@ -768,14 +770,16 @@ boost::optional<CreateCollectionResponse> checkIfCollectionAlreadySharded(
 
 void stopMigrations(OperationContext* opCtx,
                     const NamespaceString& nss,
-                    const boost::optional<UUID>& expectedCollectionUUID) {
-    setAllowMigrations(opCtx, nss, expectedCollectionUUID, false);
+                    const boost::optional<UUID>& expectedCollectionUUID,
+                    const boost::optional<OperationSessionInfo>& osi) {
+    setAllowMigrations(opCtx, nss, expectedCollectionUUID, osi, false);
 }
 
 void resumeMigrations(OperationContext* opCtx,
                       const NamespaceString& nss,
-                      const boost::optional<UUID>& expectedCollectionUUID) {
-    setAllowMigrations(opCtx, nss, expectedCollectionUUID, true);
+                      const boost::optional<UUID>& expectedCollectionUUID,
+                      const boost::optional<OperationSessionInfo>& osi) {
+    setAllowMigrations(opCtx, nss, expectedCollectionUUID, osi, true);
 }
 
 bool checkAllowMigrations(OperationContext* opCtx, const NamespaceString& nss) {
